# wms-api

./: .gitignore  README.md  pyproject.toml
app/: config.py  dependencies.py  lifespan.py  main.py
app/api/: router.py
app/core/: permissions.py  security.py
app/infrastructure/cache/: redis.py
app/infrastructure/db/: seed.py  session.py
app/middleware/: auth.py
app/modules/auth/: models.py  repository.py  router.py  schemas.py  service.py
app/modules/roles/: models.py  repository.py  router.py  schemas.py  service.py
app/modules/users/: models.py  repository.py  router.py  schemas.py  service.py
